--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "3.1.0",
+    "uuid": "8.3.2",
+    "uuidv4": "6.2.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
